# chess-hor

./: .gitignore  LICENSE  README.md  build_wasm.sh
.github/workflows/: deploy-pages.yml
chess/: CMakeLists.txt
chess/src/: MinmaxedPlayer.cpp  MinmaxedPlayer.hpp  bishop.hpp  board.cpp  board.hpp  botPlayer.hpp  castleRight.hpp  cell.hpp  color.hpp  config.hpp  humanPlayer.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  main.cpp  move.hpp  outcome.hpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  pieceFactory.hpp  pieceType.hpp  player.hpp  queen.hpp  rook.hpp
chess/tests/: tests.cpp
chess/wasm/: api.cpp  api.hpp  bindings.cpp
web/: app.js  index.html  style.css
web/engine/: .gitkeep
